# manycore_info

./: CMakeLists.txt
src/: cl_functions.h  cl_info.cpp  cuda_devices.cpp  cuda_devices.h  error.cpp  error.h  helper_cuda.h  helper_string.h  main.cpp  memory.h  opt_out.h  strbuf.cpp  strbuf.h
